fix: fixed gaps in painting list

--- a/src/components/PaintingList/styles.module.scss
+++ b/src/components/PaintingList/styles.module.scss
@@ -3,7 +3,7 @@
     grid-template-columns: repeat(auto-fit, minmax(330px, 1fr));
     justify-items: center;
     align-items: end;
-    gap: 1em;
+    gap: 2em 1.5em;
 
     @media (max-width: 425px) {
         grid-template-columns: repeat(auto-fit, minmax(100%, 1fr));
